--- a/preamble.tex
+++ b/preamble.tex
@@ -54,7 +54,7 @@
 
 \usepackage[
     backend=biber,
-    style=numeric,
+    style=alphabetic,
   ]{biblatex}
   
 \addbibresource{bibliography.bib}
