Minor layout fix

--- a/content/preliminaries/gnns.tex
+++ b/content/preliminaries/gnns.tex
@@ -98,7 +98,7 @@ nodes, and attributes respectively, as well as aggregation functions $\rho_{e \t
 $\rho_{e \to u}$, and $\rho_{v \to u}$, with
 \begin{align*}
     \ee_k' \: &\coloneqq \: \phi_e(\ee_k, \vv_{r_k}, \vv_{s_k}, \uu), 
-    &\overline{\ee}'_i \: &\coloneqq \rho_{e \to v}(E_i'), \\
+    &\overline{\ee}'_i \: &\coloneqq \: \rho_{e \to v}(E_i'), \\
     \vv_i' \: &\coloneqq \: \phi_v(\overline{\ee}'_i, \vv_i, \uu), 
     &\overline{\ee}' \: &\coloneqq \: \rho_{e \to u}(E'), \\
     \uu' \: &\coloneqq \: \phi_u(\overline{\ee}', \overline{\vv}', \uu),
