OCP chapter + project organization + layout for evaluation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -141,6 +141,70 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@article{Chanussot_2021,
+	doi = {10.1021/acscatal.0c04525},
+  
+	url = {https://doi.org/10.1021%2Facscatal.0c04525},
+  
+	year = 2021,
+	month = {may},
+  
+	publisher = {American Chemical Society ({ACS})},
+  
+	volume = {11},
+  
+	number = {10},
+  
+	pages = {6059--6072},
+  
+	author = {Lowik Chanussot and Abhishek Das and Siddharth Goyal and Thibaut Lavril and Muhammed Shuaibi and Morgane Riviere and Kevin Tran and Javier Heras-Domingo and Caleb Ho and Weihua Hu and Aini Palizhati and Anuroop Sriram and Brandon Wood and Junwoong Yoon and Devi Parikh and C. Lawrence Zitnick and Zachary Ulissi},
+  
+	title = {Open Catalyst 2020 ({OC}20) Dataset and Community Challenges},
+  
+	journal = {{ACS} Catalysis}
+}
+
+@article{doi:10.1021/ed5004788,
+author = {Baseden, Kyle A. and Tye, Jesse W.},
+title = {Introduction to Density Functional Theory: Calculations by Hand on the Helium Atom},
+journal = {Journal of Chemical Education},
+volume = {91},
+number = {12},
+pages = {2116-2123},
+year = {2014},
+doi = {10.1021/ed5004788},
+
+URL = { 
+        https://doi.org/10.1021/ed5004788
+    
+},
+eprint = { 
+        https://doi.org/10.1021/ed5004788
+    
+}
+
+}
+
+@misc{https://doi.org/10.48550/arxiv.2206.08917,
+  doi = {10.48550/ARXIV.2206.08917},
+  
+  url = {https://arxiv.org/abs/2206.08917},
+  
+  author = {Tran, Richard and Lan, Janice and Shuaibi, Muhammed and Goyal, Siddharth and Wood, Brandon M. and Das, Abhishek and Heras-Domingo, Javier and Kolluru, Adeesh and Rizvi, Ammar and Shoghi, Nima and Sriram, Anuroop and Ulissi, Zachary and Zitnick, C. Lawrence},
+  
+  keywords = {Materials Science (cond-mat.mtrl-sci), Machine Learning (cs.LG), Computational Physics (physics.comp-ph), FOS: Physical sciences, FOS: Physical sciences, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {The Open Catalyst 2022 (OC22) Dataset and Challenges for Oxide Electrocatalysis},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+
 
 
 
