--- a/content/preliminaries/ocp.tex
+++ b/content/preliminaries/ocp.tex
@@ -1,1 +1,23 @@
 \subsection{Open Catalyst Project}
+
+Catalysis plays a crucial role in the chemical industry, including energy storage and conversion in 
+fuel cells or the production of armonia for fertilizers, by enabling new reactions and improved 
+process efficiencies \cite{Chanussot_2021}. Problematic is that the number of materials that can 
+be used or modified in catalysis is very large and modeling of materials during reaction is very 
+complex and compute intensive.
+
+Machine Learning methods and in particular Graph Neural Networks have shown great success in 
+molecular simulations in recent years. Beeing able to effeciently and accurately predict the 
+forces and energy of inorganic and organic interfaces for use in catalysis avoids the 
+computational bottlenecks of traditional simulation tools, such as Density Functional Theory 
+(DFT) \cite{doi:10.1021/ed5004788}. 
+
+The Open Catalyst Project \cite*{Chanussot_2021} was launched in 2020 by Facebook AI and 
+aims to provide a unified dataset and baseline models for predicting Forces and Energy in molecular 
+simulations of catalysts. The project provides the Open Catalyst 2020 (OC20) dataset, which contains 
+1.2 million relaxations of molecular adsorptions onto surfaces simulated with DFT. Fundamentally this 
+precomputed dataset opens the door for precise predictions through ML models and allows large-scale 
+explorations of new catalysts.
+
+Recently the OCP team released a new version version of the dataset, Open Catalyst 2022 (OC22) 
+\cite{https://doi.org/10.48550/arxiv.2206.08917}
