--- a/final-report.tex
+++ b/final-report.tex
@@ -76,6 +76,10 @@
     \input{./content/preliminaries/scalable_ml.tex}
     \input{./content/preliminaries/deepspeed.tex}
 
+    \input{./content/evaluation/datasets.tex}
+
+    \input{./content/project_organization.tex}
+
 
     \clearpage
 
