--- a/content/project_organization.tex
+++ b/content/project_organization.tex
@@ -13,7 +13,7 @@ Our project was structured in 4 phases:
     \item \textit{Baseline formulation (3 weeks)}: 
     \item \textit{Implementation (4 weeks)}: After defining the baseline, we integrated and tested all deepspeed 
     stages in the OCP project during our implementation phase.
-    \item \textit{Evaluation & Final report (3 weeks)}: In the final weeks of the project, we conducted baselines 
+    \item \textit{Evaluation and Final report (3 weeks)}: In the final weeks of the project, we conducted baselines 
     and deepspeed experiments and recorded our observations and analysis. In addition, we focused on the final 
     report during this phase.
 \end{enumerate}
