--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -12,3 +12,7 @@ Here we describe our problem and the general goals of the project. (Can be repet
 
 The main contributions of our project (integration of Deepspeed into OCP project to scale and speed up atomic simulations). 
 Can be repetetive with later parts of our final report.
+
+\subsection{Structure}
+
+The structure of our final report.
