--- a/bibliography.bib
+++ b/bibliography.bib
@@ -69,7 +69,7 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@misc{https://doi.org/10.48550/arxiv.1811.02084,
+@misc{10.48550/ARXIV.1811.02084,
   doi = {10.48550/ARXIV.1811.02084},
   
   url = {https://arxiv.org/abs/1811.02084},
@@ -87,7 +87,7 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@misc{https://doi.org/10.48550/arxiv.1909.08053,
+@misc{10.48550/ARXIV.1909.08053,
   doi = {10.48550/ARXIV.1909.08053},
   
   url = {https://arxiv.org/abs/1909.08053},
@@ -105,7 +105,7 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@misc{https://doi.org/10.48550/arxiv.1811.06965,
+@misc{10.48550/ARXIV.1811.06965,
   doi = {10.48550/ARXIV.1811.06965},
   
   url = {https://arxiv.org/abs/1811.06965},
@@ -123,7 +123,7 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@misc{https://doi.org/10.48550/arxiv.1806.03377,
+@misc{10.48550/ARXIV.1806.03377,
   doi = {10.48550/ARXIV.1806.03377},
   
   url = {https://arxiv.org/abs/1806.03377},
