--- a/content/implementation/zero.tex
+++ b/content/implementation/zero.tex
@@ -1,6 +1,6 @@
 \subsection{Zero Redundancy Optimizer (ZeRO)}
 
-The Zero Redundancy Optimizer (ZeRO) is a scaling engine on top of data-parallel training of 
+The Zero Redundancy Optimizer (ZeRO) is a scaling engine on top of data-parallel training for 
 machine learning models. In short, ZeRO removes memory redundancies by partitioning states which 
 are used accross all processes such as the optimizer states, gradients and model parameters. 
 Since all processes only have to maintain a shard of states, ZeRO should use less memory while 
