--- a/content/preliminaries/gnns.tex
+++ b/content/preliminaries/gnns.tex
@@ -82,7 +82,8 @@ can be expressed elegantly in the language of the EGN framework.
 
 \subsubsection*{Graph Networks}
 
-Most of this section is an outline of \cite[Section 3.2]{https://doi.org/10.48550/arxiv.1806.01261}. Within the GN framework, a graph is modeled as a 3-tuple
+Most of this section is an outline of \cite[Section 3.2]{https://doi.org/10.48550/arxiv.1806.01261}. 
+Within the GN framework, a graph is modeled as a 3-tuple
 \[ G \: = \: (\uu, V, E) \text{,} \]
 where $\uu \in \R^{d_u}$ is a global attribute of the graph. $V$ and $E$ are the set of nodes and
 set of edges respectively;
@@ -145,7 +146,8 @@ network output.
 
 \subsubsection*{Extended Graph Networks}
 
-The Extended Graph Network (EGN) framework \cite[Section 2.1]{https://doi.org/10.48550/arxiv.2203.09697} is a generalization of GNs to graphs which 
+The Extended Graph Network (EGN) framework \cite[Section 2.1]{https://doi.org/10.48550/arxiv.2203.09697}
+ is a generalization of GNs to graphs which 
 incorporate higher-order interactions: In the EGN framework, a graph is defined as
 \[ G \: \coloneqq \: (\uu, V, E, T) \]
 with $\uu$, $V$, and $E$ as before, as well as
