--- a/preamble.tex
+++ b/preamble.tex
@@ -83,10 +83,12 @@
 % bold variables
 \newcommand{\xx}{\boldsymbol{x}}
 \newcommand{\yy}{\boldsymbol{y}}
+\newcommand{\zz}{\boldsymbol{z}}
 \newcommand{\uu}{\boldsymbol{u}}
 \newcommand{\vv}{\boldsymbol{v}}
 \newcommand{\ee}{\boldsymbol{e}}
 \newcommand{\ttt}{\boldsymbol{t}}
+\newcommand{\XX}{\boldsymbol{X}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Official TUM colors
