Add reference to GNs

--- a/content/preliminaries/atomic_simulations.tex
+++ b/content/preliminaries/atomic_simulations.tex
@@ -38,7 +38,7 @@ these fundamental invariants of its predicting function learn on its own (e.g. b
 data augmentation), they are often directly incorporated into the model to reduce 
 complexity. One approach to achieve this is to compute pairwise distances $d_{ij}$ 
 between the atoms and use them instead of the individual atomic locations $\XX$, 
-so---in the GN language---define an input graph with the atomic numbers $\zz$ as 
+so---in the GN language (see \ref{subsubsec:gns})---define an input graph with the atomic numbers $\zz$ as 
 node attributes and the interatomic distances as edge attributes (say, if a bond exists
 between two atoms or the distance is below some threshold).
 
