--- a/content/preliminaries/gnns.tex
+++ b/content/preliminaries/gnns.tex
@@ -80,7 +80,8 @@ GNNs for atomic simulations that make use of such higher-order interactions, as 
 in subsection~\ref{subsec:atomic-simulations}, \cite*{DBLP:journals/corr/abs-2003-03123,https://doi.org/10.48550/arxiv.2106.08903}, 
 can be expressed elegantly in the language of the EGN framework.
 
-\subsubsection*{Graph Networks}
+\subsubsection{Graph Networks}
+\label{subsubsec:gns}
 
 Most of this section is an outline of \cite[Section 3.2]{https://doi.org/10.48550/arxiv.1806.01261}. 
 Within the GN framework, a graph is modeled as a 3-tuple
@@ -144,7 +145,7 @@ node prediction as well as edge prediction can be performed with a GNN as just
 the corresponding attribute of the GNN output graph can be regarded as the final 
 network output.
 
-\subsubsection*{Extended Graph Networks}
+\subsubsection{Extended Graph Networks}
 
 The Extended Graph Network (EGN) framework \cite[Section 2.1]{https://doi.org/10.48550/arxiv.2203.09697}
  is a generalization of GNs to graphs which 
