Finish introduction atomic simulations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -220,6 +220,24 @@ eprint = {
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@misc{https://doi.org/10.48550/arxiv.2011.14115,
+  doi = {10.48550/ARXIV.2011.14115},
+  
+  url = {https://arxiv.org/abs/2011.14115},
+  
+  author = {Gasteiger, Johannes and Giri, Shankari and Margraf, Johannes T. and Günnemann, Stephan},
+  
+  keywords = {Machine Learning (cs.LG), Chemical Physics (physics.chem-ph), Computational Physics (physics.comp-ph), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {Fast and Uncertainty-Aware Directional Message Passing for Non-Equilibrium Molecules},
+  
+  publisher = {arXiv},
+  
+  year = {2020},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 
 
 
